--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,10 +3,10 @@
 #Comment out the ddl-auto line after the first time you run the application
 #spring.jpa.hibernate.ddl-auto=create
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-#spring.jpa.show-sql = true
+#spring.jpa.show-sql=true
 #spring.datasource.url=jdbc:mysql://localhost:3306/db_coffee?createDatabaseIfNotExist=true
 #spring.datasource.username=root
-#spring.datasource.password=
+#spring.datasource.password=root
 
 server.port=8081
 server.servlet.session.cookie.http-only=false
